--- a/styles.scss
+++ b/styles.scss
@@ -83,12 +83,21 @@
     }
     .hero-image-wrapper{
         display: flex;
-        padding: 2.5rem;
+        padding: 2.5rem ;
         box-sizing: border-box;
+        position: relative;
+        &::before{
+            content: "";
+            position: absolute;
+            bottom: 40px;
+            left: 6px;
+            display: flex;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(transparent 57%, white 64%);
+        }
     }
     .hero-image{
-        border-radius: 50%;
-        aspect-ratio: 1/1;
         object-fit: cover;
         width: 100%;
     }
@@ -98,12 +107,16 @@
 }
 
 #exp_section_homepage{
-    gap: 1.25rem 1.875rem;
-    .section-title{
-        flex: 1 1 100%;
+    .section-subtitle{
+        color: var(--color-3);
     }
-    .column{
-        flex: 1;
+    h4{
+        background-color: var(--color-4);
+        color: black;
+        padding: 10px;
+        box-sizing: border-box;
+        width: fit-content;
+        font-size: 16px;
     }
 }
 
