--- a/styles.scss
+++ b/styles.scss
@@ -13,35 +13,37 @@
     --color-2: rgb(212, 194, 252);
     --color-3: rgb(219, 83, 117);
     --color-4: rgb(58, 175, 185);
-}
 
-.main-nav{
-    background-color: color-mix(in srgb, var(--color-4) 70%, transparent);;
-    color: var(--color-1);
-    font-weight: 700;
-    ul{
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-        transition: .4s;
-        padding: 1.25rem 2.5rem;
+    h1, h2, h3, h4, h5, h6  {
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
     }
-    .nav-item a{
-        font-size: 1.125rem;
-        color: currentColor;
+
+    a {
+        color: var(--color-3);
+        transition: .3s ease;
         text-decoration: none;
-        transition: .4s;
-        &:focus,&:hover{
-            color: var(--color-3);
+        &:hover {
+            text-decoration: underline;
+            color: rgba(var(--color-3), 10%);
+        }
+        &:focus {
+            text-decoration: none;
         }
     }
-    @media (min-width: 1024px){
-        &{
-            position: fixed;
-            top: 0rem;
-            width: 100%;
+}
+
+.navbar{
+    .navbar-nav{
+        gap: 20px;
+    }
+    .nav-item {
+        background-color: rgb(243,243,243);
+        border-radius: 40px;
+        box-shadow: 0px 0px 4px 2px rgba(0,0,0,0.1);
+        &.active{
+            background-color: var(--color-3); 
+            color: white;
         }
     }
 }
@@ -72,114 +74,133 @@
     margin-bottom: 1.25rem;
     font-size: 1.875rem;
 }
-.hero-section{
-    aspect-ratio: 16/9;
-    background-color: white;
-    justify-content: center;
-    align-items: center;
-    gap: 5rem;
-    & > *{
-        flex: 1;
+.hero-image-wrapper{
+    display: flex;
+    padding: 2.5rem ;
+    box-sizing: border-box;
+    position: relative;
+}
+.hero-image{
+    object-fit: cover;
+    width: 100%;
+}
+.focus{
+    color: var(--color-3);
+}
+
+.section{
+    margin-bottom: 30px;
+    
+    .section-inner {
+        background: #fff;
+        padding: 30px;
     }
-    .hero-image-wrapper{
-        display: flex;
-        padding: 2.5rem ;
-        box-sizing: border-box;
-        position: relative;
-        &::before{
-            content: "";
-            position: absolute;
-            bottom: 40px;
-            left: 6px;
-            display: flex;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(transparent 57%, white 64%);
+    .heading {
+        margin-top: 0;
+        margin-bottom: 30px;
+        color: rgb(var(--color-3), 15%);
+        font-size: 24px;
+    }
+    .content {
+        .more-link {
+            .svg-inline--fa {
+                margin-right: 5px;
+                font-size: 14px;
+                position: relative;
+                top: -2px;
+            }
         }
-    }
-    .hero-image{
-        object-fit: cover;
-        width: 100%;
-    }
-    .focus{
-        color: var(--color-3);
     }
 }
 
-#exp_section_homepage{
-    .section-subtitle{
-        color: var(--color-3);
+.experience {
+    .item {
+        margin-bottom: 30px;
+        .title {
+            font-size: 16px;
+            margin-top: 0;
+            margin-bottom: 5px;
+            line-height: 1.5;
+            
+            .place {
+                color: rgb(243,243,243);
+                font-weight: normal;  
+                a {
+                    color: var(--color-3);
+                    &:hover {
+                        color: rgba(var(--color-3), 80%);
+                    }
+                }
+            }
+            .year {
+                color: var(--color-4);
+                font-weight: normal;
+            }
+        }        
     }
-    h4{
-        background-color: var(--color-4);
-        color: black;
-        padding: 10px;
-        box-sizing: border-box;
-        width: fit-content;
-        font-size: 16px;
-    }
+
 }
 
-#skills_section_homepage{
-    align-items: center;
-    #homepage_illustration{
-        max-width: 100%;
+.skills {
+    .intro {
+        margin-bottom: 30px;
     }
-    #progress_container{
-        display: flex;
-        flex-direction: column;
-        gap: 1.5rem;
-    }
+    .skillset {
 
-    .progress-item{
-        display: grid;
-        grid-template-areas: "logo label" "logo bar";
-        grid-template-columns: auto 1fr;
-        justify-content: center;
-        align-items: center;
-        gap: 0 1.875rem;
-    }
-
-    .skill{
-        max-width: 3.5rem;
-        grid-area: logo;
-    }
-    .progress-label{
-        grid-area: label;
-    }
-
-    .progress-bar{
-        grid-area: bar;
-        width: 100%;
-        height: 1.875rem;
-        padding: 0 1.25rem;
-        box-sizing: border-box;
-        border: solid 3px var(--color-1);
-        display: flex;
-        align-items: center;
-        position: relative;
-        &::before{
-            content: "";
-            top: 0;
-            left: 0;
-            position: absolute;
-            height: 100%;
+        .item {
+            margin-bottom: 30px;
         }
-       &:nth-child(3n-1)::before{
-            background: linear-gradient(90deg, var(--color-2) 0% , var(--color-3) 100%);
-            width: 30%;
-       }
-       &:nth-child(3n-2)::before{
-        background: linear-gradient(90deg, var(--color-3) 0% , var(--color-4) 100%);
-            width: 30%;
-       } 
-       &:nth-child(3n-3)::before{
-        background: linear-gradient(90deg, var(--color-4) 0% , var(--color-2) 100%);
-            width: 30%;
-       }
-
+        .level-title {
+            font-size: 16px;
+            position: relative;
+            margin-top: 0;
+            margin-bottom: 10;
+            .level-label {
+                color: rgba(var(--color-4), 30%);
+                font-size: 14px;
+                font-weight: 400;
+                position: absolute;
+                right: 0;
+                top: 0;
+            }
+            
+        }
+        .level-bar {
+            height: 15px;
+            background: rgba(var(--color-3), 5%);
+        }
+        .level-bar-inner {
+            height: 15px;
+            background: rgba(var(--color-2), 15%);
+        }
     }
-    .column{
-        flex: 1;
+    .svg-inline--fa {
+	    margin-right: 3px;
+	    position: relative;
+	    top: 0;
+    }
+    
+}
+
+.education {
+    .item {
+        margin-bottom: 30px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+        .title {
+            font-size: 16px;
+            margin-top: 0;
+        }
+        .university {
+            font-size: 13px;
+            color: var(--color-1);
+            font-weight: 600;
+            padding-left: 25px;
+            .year {
+                color: var(--color-1);
+                font-weight: 500;
+            }
+        }
     }
 }
