--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,11 @@
   text-decoration: none;
 }
 
+.py-6 {
+  padding-top: 100px !important;
+  padding-bottom: 100px !important;
+}
+
 .navbar .navbar-nav {
   gap: 20px;
 }
@@ -73,7 +78,7 @@
 
 .hero-image-wrapper {
   display: flex;
-  padding: 2.5rem;
+  padding: 0 2.5rem;
   box-sizing: border-box;
   position: relative;
 }
@@ -81,10 +86,19 @@
 .hero-image {
   object-fit: cover;
   width: 100%;
+  border-radius: 10px;
 }
 
 .focus {
   color: var(--color-3);
+}
+
+.monospaced {
+  font-family: "Courier New", Courier, monospace;
+}
+
+.easter {
+  display: none;
 }
 
 .section {
@@ -107,6 +121,14 @@
   top: -2px;
 }
 
+.about .section-inner {
+  display: flex;
+  background: color-mix(in srgb, var(--color-3) 10%, transparent);
+}
+
+.experience .section-inner {
+  background: color-mix(in srgb, var(--color-4) 60%, transparent);
+}
 .experience .item {
   margin-bottom: 30px;
 }
@@ -124,18 +146,30 @@
   color: var(--color-3);
 }
 .experience .item .title .place a:hover {
-  color: rgba(var(--color-3), 80%);
+  color: color-mix(in srgb, var(--color-3) 80%, transparent);
 }
 .experience .item .title .year {
-  color: var(--color-4);
+  color: var(--color-1);
   font-weight: normal;
 }
 
+.info .section-inner {
+  background: color-mix(in srgb, var(--color-2) 100%, transparent);
+}
+
+.skills .section-inner {
+  background: color-mix(in srgb, var(--color-2) 80%, transparent);
+}
 .skills .intro {
   margin-bottom: 30px;
 }
 .skills .skillset .item {
   margin-bottom: 30px;
+  display: grid;
+  align-items: center;
+  justify-self: center;
+  column-gap: 10px;
+  grid-template-columns: auto 1fr;
 }
 .skills .skillset .level-title {
   font-size: 16px;
@@ -144,27 +178,38 @@
   margin-bottom: 10;
 }
 .skills .skillset .level-title .level-label {
-  color: rgba(var(--color-4), 30%);
+  color: var(--color-4);
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 700;
   position: absolute;
   right: 0;
   top: 0;
 }
 .skills .skillset .level-bar {
   height: 15px;
-  background: rgba(var(--color-3), 5%);
+  background: color-mix(in srgb, var(--color-1) 15%, transparent);
 }
 .skills .skillset .level-bar-inner {
   height: 15px;
-  background: rgba(var(--color-2), 15%);
+  background: color-mix(in srgb, var(--color-3) 55%, transparent);
 }
 .skills .svg-inline--fa {
   margin-right: 3px;
   position: relative;
   top: 0;
 }
+.skills .skill-item-img {
+  width: 30px;
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+*:not(.skills .skill-item-img) {
+  grid-column: 2/3;
+}
 
+.education .section-inner {
+  background: color-mix(in srgb, var(--color-2) 60%, transparent);
+}
 .education .item {
   margin-bottom: 30px;
 }
@@ -184,4 +229,12 @@
 .education .item .university .year {
   color: var(--color-1);
   font-weight: 500;
+}
+
+.languages .section-inner {
+  background: color-mix(in srgb, var(--color-2) 40%, transparent);
+}
+
+.music .section-inner {
+  background: color-mix(in srgb, var(--color-2) 20%, transparent);
 }
