--- a/styles.scss
+++ b/styles.scss
@@ -33,6 +33,11 @@
     }
 }
 
+.py-6{
+    padding-top: 100px!important;
+    padding-bottom: 100px!important; 
+}
+
 .navbar{
     .navbar-nav{
         gap: 20px;
@@ -76,16 +81,25 @@
 }
 .hero-image-wrapper{
     display: flex;
-    padding: 2.5rem ;
+    padding: 0 2.5rem ;
     box-sizing: border-box;
     position: relative;
 }
 .hero-image{
     object-fit: cover;
     width: 100%;
+    border-radius: 10px;
 }
 .focus{
     color: var(--color-3);
+}
+
+.monospaced {
+    font-family: "Courier New", Courier, monospace; 
+}
+
+.easter{
+    display: none;
 }
 
 .section{
@@ -112,8 +126,17 @@
         }
     }
 }
+.about{
+    .section-inner{
+        display: flex;
+        background: color-mix(in srgb, var(--color-3) 10%, transparent);
+    }
+}
 
 .experience {
+    .section-inner{
+        background: color-mix(in srgb, var(--color-4) 60%, transparent);
+    }
     .item {
         margin-bottom: 30px;
         .title {
@@ -128,12 +151,12 @@
                 a {
                     color: var(--color-3);
                     &:hover {
-                        color: rgba(var(--color-3), 80%);
+                        color: color-mix(in srgb, var(--color-3) 80%, transparent);
                     }
                 }
             }
             .year {
-                color: var(--color-4);
+                color: var(--color-1);
                 font-weight: normal;
             }
         }        
@@ -141,7 +164,16 @@
 
 }
 
+.info{
+    .section-inner{
+        background: color-mix(in srgb, var(--color-2) 100%, transparent);
+    } 
+}
+
 .skills {
+    .section-inner{
+        background: color-mix(in srgb, var(--color-2) 80%, transparent);
+    }
     .intro {
         margin-bottom: 30px;
     }
@@ -149,6 +181,11 @@
 
         .item {
             margin-bottom: 30px;
+            display: grid;
+            align-items: center;
+            justify-self: center;
+            column-gap: 10px;
+            grid-template-columns: auto 1fr;
         }
         .level-title {
             font-size: 16px;
@@ -156,9 +193,9 @@
             margin-top: 0;
             margin-bottom: 10;
             .level-label {
-                color: rgba(var(--color-4), 30%);
+                color: var(--color-4);
                 font-size: 14px;
-                font-weight: 400;
+                font-weight: 700;
                 position: absolute;
                 right: 0;
                 top: 0;
@@ -167,11 +204,11 @@
         }
         .level-bar {
             height: 15px;
-            background: rgba(var(--color-3), 5%);
+            background: color-mix(in srgb, var(--color-1) 15%, transparent);
         }
         .level-bar-inner {
             height: 15px;
-            background: rgba(var(--color-2), 15%);
+            background: color-mix(in srgb, var(--color-3) 55%, transparent);
         }
     }
     .svg-inline--fa {
@@ -179,10 +216,22 @@
 	    position: relative;
 	    top: 0;
     }
+
+    .skill-item-img{
+        width: 30px;
+        grid-column: 1/2;
+        grid-row: 1/3;
+        *:not(&){
+            grid-column: 2/3;
+        }
+    }
     
 }
 
 .education {
+    .section-inner{
+        background: color-mix(in srgb, var(--color-2) 60%, transparent);
+    } 
     .item {
         margin-bottom: 30px;
         &:last-child {
@@ -202,5 +251,16 @@
                 font-weight: 500;
             }
         }
+    }
+}
+.languages {
+    .section-inner{
+        background: color-mix(in srgb, var(--color-2) 40%, transparent);
+    }
+}
+
+.music {
+    .section-inner{
+        background: color-mix(in srgb, var(--color-2) 20%, transparent);
     }
 }
