--- a/styles.css
+++ b/styles.css
@@ -35,12 +35,12 @@
 .navbar .navbar-nav {
   gap: 20px;
 }
-.navbar .nav-item {
+.navbar .nav-item a {
   background-color: rgb(243, 243, 243);
   border-radius: 40px;
   box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.1);
 }
-.navbar .nav-item.active {
+.navbar .nav-item.active a {
   background-color: var(--color-3);
   color: white;
 }
@@ -78,14 +78,15 @@
 
 .hero-image-wrapper {
   display: flex;
-  padding: 0 2.5rem;
+  padding: 0 24px 0;
   box-sizing: border-box;
   position: relative;
 }
 
 .hero-image {
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
+  max-height: 21.625rem;
   border-radius: 10px;
 }
 
@@ -108,6 +109,18 @@
   background: #fff;
   padding: 30px;
 }
+.section .section-inner.wm-black {
+  background-repeat: no-repeat;
+  background-position: calc(100% - 15px) calc(100% - 15px);
+  background-size: 40px;
+  background-image: url("/pics/logo-wm-black.png");
+}
+.section .section-inner.wm-white {
+  background-repeat: no-repeat;
+  background-position: calc(100% - 15px) calc(100% - 15px);
+  background-size: 40px;
+  background-image: url("/pics/logo-wm-white.png");
+}
 .section .heading {
   margin-top: 0;
   margin-bottom: 30px;
@@ -122,8 +135,12 @@
 }
 
 .about .section-inner {
-  display: flex;
   background: color-mix(in srgb, var(--color-3) 10%, transparent);
+}
+@media (min-width: 768px) {
+  .about .section-inner {
+    display: flex;
+  }
 }
 
 .experience .section-inner {
