--- a/styles.scss
+++ b/styles.scss
@@ -43,10 +43,12 @@
         gap: 20px;
     }
     .nav-item {
+        a{
         background-color: rgb(243,243,243);
         border-radius: 40px;
         box-shadow: 0px 0px 4px 2px rgba(0,0,0,0.1);
-        &.active{
+        }
+        &.active a{
             background-color: var(--color-3); 
             color: white;
         }
@@ -81,13 +83,14 @@
 }
 .hero-image-wrapper{
     display: flex;
-    padding: 0 2.5rem ;
+    padding: 0 24px 0 ;
     box-sizing: border-box;
     position: relative;
 }
 .hero-image{
-    object-fit: cover;
+    object-fit: contain;
     width: 100%;
+    max-height: 21.625rem;
     border-radius: 10px;
 }
 .focus{
@@ -108,6 +111,20 @@
     .section-inner {
         background: #fff;
         padding: 30px;
+        &.wm{
+            &-black{ 
+                background-repeat: no-repeat;
+                background-position: calc(100% - 15px) calc(100% - 15px);
+                background-size: 40px;
+                background-image: url("/pics/logo-wm-black.png");
+            }
+            &-white{
+                background-repeat: no-repeat;
+                background-position: calc(100% - 15px) calc(100% - 15px);
+                background-size: 40px;
+                background-image: url("/pics/logo-wm-white.png");
+            }
+        }
     }
     .heading {
         margin-top: 0;
@@ -128,8 +145,12 @@
 }
 .about{
     .section-inner{
-        display: flex;
         background: color-mix(in srgb, var(--color-3) 10%, transparent);
+    }
+    @media (min-width: 768px) {
+        .section-inner{
+            display: flex;
+        }
     }
 }
 
