--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,13 @@
   text-decoration: none;
 }
 
+body {
+  background: linear-gradient(45deg, color-mix(in srgb, var(--color-4) 40%, transparent), white 30%, white 70%, color-mix(in srgb, var(--color-2) 60%, transparent));
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+}
+
 .py-6 {
   padding-top: 100px !important;
   padding-bottom: 100px !important;
@@ -254,4 +261,9 @@
 
 .music .section-inner {
   background: color-mix(in srgb, var(--color-2) 20%, transparent);
+}
+
+.form-submit .btn {
+  background-color: var(--color-4);
+  border-radius: 30px;
 }
