--- a/styles.scss
+++ b/styles.scss
@@ -33,6 +33,13 @@
     }
 }
 
+body{
+    background: linear-gradient(45deg, color-mix(in srgb, var(--color-4) 40%, transparent), white 30%, white 70%, color-mix(in srgb, var(--color-2) 60%, transparent));
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+}
+
 .py-6{
     padding-top: 100px!important;
     padding-bottom: 100px!important; 
@@ -285,3 +292,11 @@
         background: color-mix(in srgb, var(--color-2) 20%, transparent);
     }
 }
+
+.form-submit{
+    .btn{
+        background-color: var(--color-4);
+        border-radius: 30px;
+    }
+}
+
